Se agrego incluyo algunos controller y models al proyecto, estaban agregados pero no incluidos

--- a/ProyectoFinalAPI/ProyectoFinalAPI.csproj
+++ b/ProyectoFinalAPI/ProyectoFinalAPI.csproj
@@ -185,7 +185,10 @@
     <Compile Include="Controllers\HotelController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PagoController.cs" />
+    <Compile Include="Controllers\PaisController.cs" />
     <Compile Include="Controllers\ReservaController.cs" />
+    <Compile Include="Controllers\TarifaController.cs" />
+    <Compile Include="Controllers\TipoPagoController.cs" />
     <Compile Include="Controllers\TokenGenerator.cs" />
     <Compile Include="Controllers\TokenValidationHandler.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -202,7 +205,10 @@
     <Compile Include="Models\Hotel.cs" />
     <Compile Include="Models\LoginRequest.cs" />
     <Compile Include="Models\Pago.cs" />
+    <Compile Include="Models\Pais.cs" />
     <Compile Include="Models\Reserva.cs" />
+    <Compile Include="Models\Tarifa.cs" />
+    <Compile Include="Models\TipoPago.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Models\Vuelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
