--- a/ProyectoFinalAPI/Web.config
+++ b/ProyectoFinalAPI/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
     <connectionStrings>
-	    <add name="RESERVAS" connectionString="Data Source=localhost;Initial catalog=RESERVAS_SWFINAL;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+	    <add name="RESERVAS" connectionString="Data Source=DESKTOP-5KTC557\MSSQLSERVER01;Initial catalog=RESERVAS_SWFINAL;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
     </connectionStrings>
   <appSettings>
 	<add key="JWT_SECRET_KEY"     value="clave-secreta-api"/>
